data/collection/fixes/descriptions/java/JDK-8215507
public class A {
    static final value class V {
        public final int v1;
        private V () {v1 = 0;}
    }

    public static void main(String args[]) {
        int [] ia = new int[1];
        Object oa[] = (Object[])ia;

        V [] va = new V[1];
        Object oa2[] = (Object[])va;
    }
}


$ javac A.java
A.java:9: error: incompatible types: int[] cannot be converted to Object[]
        Object oa[] = (Object[])ia;
                                ^
1 error

A similar error should be generated on the conversion of V[] -> Object[].